[package]
name = "rusty-messenger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
tokio = { version = "1.20.0", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"
futures = "0.3.21"
serde_json = "1.0"
